[package]
name = "serve"
version = "0.1.0"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
