[package]
name = "serve"
version = "0.1.4"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"
repository = "https://github.com/FreeMasen/serve"
homepage = "https://gh.freemasen.com/serve"
description = "serve a directory"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
